--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinecone-database/pinecone": "^0.1.6",
     "dotenv": "^16.3.1",
     "nanoid": "^4.0.2",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "pdf2json": "^3.0.4"
   }
 }
