--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@pinecone-database/pinecone": "^0.1.6",
     "dotenv": "^16.3.1",
+    "inquirer": "^9.2.8",
     "nanoid": "^4.0.2",
     "openai": "^3.3.0",
     "pdf2json": "^3.0.4"
-  }
+  },
+  "type": "module"
 }
